pgesek | #412 | PMD: Integer Instantiation
Change-Id: I28d2f0eb0f3ee62b92209eeefb6f9811788e1429